<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menuBuscar"
        android:title="@string/opcion_buscar"
        android:icon="@drawable/baseline_search_24"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuMisReservas"
        android:title="@string/opcion_mis_reservas"
        android:icon="@drawable/baseline_today_24"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuFavoritos"
        android:title="@string/opcion_favoritos"
        android:icon="@drawable/baseline_favorite_24"
        android:orderInCategory="3"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuSettings"
        android:title="@string/opcion_settings"
        android:icon="@drawable/baseline_settings_24"
        android:orderInCategory="4"
        app:showAsAction="ifRoom" />

</menu>