<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalleAlojamientoFragment">

    <!-- TODO: Update blank fragment layout -->
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:id="@+id/tituloDetalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/descripcionDetalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:text="@string/descripcionDetalleText"
            android:textAlignment="center"
            android:textSize="16sp" />

            <TextView
                android:id="@+id/capacidadDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/capacidadDetalleText"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/precioBaseDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/precioBaseDetalleText"
                android:textAlignment="center"
                android:textSize="16sp" />

            <!-- DEPARTAMENTO -->

            <TextView
                android:id="@+id/tieneWifiDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/tieneWifiDetalleText"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/costoLimpiezaDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/costoLimpiezaDetalleText"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/cantidadHabitacionesDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/cantidadHabitacionesDetalleText"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/ubicacionDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/ubicacionDetalleText"
                android:textAlignment="center"
                android:textSize="16sp" />

            <!-- HABITACION -->

            <TextView
                android:id="@+id/camasIndividualesDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/camasIndividualesDetalleText"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/camasMatrimonialesDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/camasMatrimonialesDetalleText"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tieneEstacionamientoDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/tieneEstacionamientoDetalleText"
                android:textAlignment="center"
                android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/fechaIngresoId"
                android:hint="Fecha de ingreso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:ems="8"
                android:textAlignment="center"
                android:inputType="date" />

            <EditText
                android:id="@+id/fechaEgresoId"
                android:hint="Fecha de egreso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:ems="8"
                android:textAlignment="center"
                android:inputType="date" />

        </LinearLayout>

            <EditText
                android:id="@+id/cantidadPersonasDetalleId"
                android:hint="cantidad de personas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_gravity="center"
                android:ems="9"
                android:inputType="number"
                android:textAlignment="center"
                android:maxLength="2"/>

            <TextView
                android:id="@+id/precioDetalleId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:gravity="end"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="bottom">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:gravity="bottom|center">

                    <ImageButton
                        android:id="@+id/favoriteButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="50dp"
                        android:minWidth="125dp"
                        android:tooltipText="Agregar a favoritos"
                        android:src="@drawable/baseline_favorite_black_24" />

                    <ImageButton
                        android:id="@+id/redFavoriteButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="50dp"
                        android:minWidth="125dp"
                        android:visibility="gone"
                        android:src="@drawable/baseline_favorite_black_24"
                        app:tint="@android:color/holo_red_dark" />

                    <Button
                        android:id="@+id/reservarButtonId"
                        android:layout_width="wrap_content"
                        android:minHeight="50dp"
                        android:minWidth="125dp"
                        android:layout_height="wrap_content"
                        android:text="Reservar" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>